[package]
name = "yewchat"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
gloo-net = "0.5.0"
wasm-bindgen-futures = "0.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
wasm-logger = "0.2"
web-sys = "0.3.98"
gloo-timers = { version = "0.3", features = ["futures"] }